--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,12 +26,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 100px auto;
+  /* margin: 50px auto; */
 }
 
 h1 {
   font-size: 16px;
   font-weight: bold;
+  margin-top: 50px;
 }
 
 main {
