--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,7 +32,7 @@ body {
 h1 {
   font-size: 16px;
   font-weight: bold;
-  margin-top: 50px;
+  margin: 50px 0 20px 0;
 }
 
 main {
@@ -61,7 +61,7 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1em;
+  padding: 2em;
 }
 
 .generator-result p {
@@ -316,9 +316,5 @@ main {
 
   .generator__strength-title {
     font-size: 24px;
-  }
-
-  .generator__strength-section {
-    background: none;
   }
 }
